setup policy for standard services

--- a/aws-config-conformance-packs/Operational-Best-Practices-for-HIPAA-Security.yaml
+++ b/aws-config-conformance-packs/Operational-Best-Practices-for-HIPAA-Security.yaml
@@ -1166,6 +1166,11 @@ Resources:
       Source:
         Owner: AWS
         SourceIdentifier: S3_BUCKET_POLICY_GRANTEE_CHECK
+      InputParameters:
+        servicePrincipals:
+        - cloudtrail.amazonaws.com
+        - config.amazonaws.com
+        - logging.s3.amazonaws.com
     Type: AWS::Config::ConfigRule
   S3BucketPublicReadProhibited:
     Properties:
