--- a/aws-config-conformance-packs/Operational-Best-Practices-for-HIPAA-Security.yaml
+++ b/aws-config-conformance-packs/Operational-Best-Practices-for-HIPAA-Security.yaml
@@ -1167,10 +1167,7 @@ Resources:
         Owner: AWS
         SourceIdentifier: S3_BUCKET_POLICY_GRANTEE_CHECK
       InputParameters:
-        servicePrincipals:
-        - cloudtrail.amazonaws.com
-        - config.amazonaws.com
-        - logging.s3.amazonaws.com
+        servicePrincipals: "cloudtrail.amazonaws.com,config.amazonaws.com,logging.s3.amazonaws.com,delivery.logs.amazonaws.com"
     Type: AWS::Config::ConfigRule
   S3BucketPublicReadProhibited:
     Properties:
